--- a/sections/03-accelerate.tex
+++ b/sections/03-accelerate.tex
@@ -1020,11 +1020,11 @@ languages in Haskell for array programming, both of which are similar in intent
 to Accelerate. Compared to Accelerate, the programming languages of both
 Obsidian and Nikola are severely restricted. Both are limited to a single
 computation over one dimensional vectors of primitive type, whereas Accelerate
-supports multidimensional arrays, tuples, and computations can span multiple
-operations and kernels. Due to its compilation method, Nikola only supports
-@map@-like functions, while Obsidian is able to encode more complex operations
-such as @scan@ because its lower level interface exposes more details of the
-target hardware.
+supports multidimensional arrays, product types, and computations can span
+multiple operations and kernels. Due to its compilation method, Nikola only
+supports @map@-like functions, while Obsidian is able to encode more complex
+operations such as @scan@ because its lower level interface exposes more details
+of the target hardware.
 
 None of these embedded languages encode the types of the source program into the
 embedded language terms to the degree with which Accelerate does.
